# draft_battles

./: .gitignore  README.md  data.csv  db.sqlite3  fantasy_points.csv  gui.py  img_scrape.py  manage.py  models.py  pfr_scrape.ipynb  pfr_scrape.py  populate_db.py  pyproject.toml  repository.py  requirements.txt  router.py
api/: main.py  models.py  pyproject.toml  repository.py  router.py  serializers.py  tests.py  urls.py  utils.py  views.py
api/migrations/: 0001_initial.py  0002_nflplayer_name_searchable.py  0003_nflplayer_img.py
draft_battles/: asgi.py  settings.py  urls.py  wsgi.py
main/: urls.py  views.py
main/static/main/: play_game.css
main/static/main/css/: homepage.css  play_game.css
main/static/main/js/: homepage.js  play_game.js
main/templates/main/: homepage.html  play_game.html
nflplayers/: admin.py  apps.py  models.py  urls.py  views.py
nflplayers/migrations/: 0001_initial.py  0002_remove_nflplayer_fp_1970_remove_nflplayer_fp_1971_and_more.py  0003_nflplayer_fp_1970_nflplayer_fp_1971_and_more.py  0004_alter_nflplayer_fp_2022.py  0005_alter_nflplayer_fp_2022.py
