[project]
name = "draft-battles"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.14",
    "motor>=3.7.1",
    "pydantic>=2.11.7",
    "pymongo>=4.13.2",
    "python-dotenv>=1.1.1",
    "uvicorn>=0.35.0",
]
