[project]
name = "draft-battles"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "bson>=0.5.10",
    "fastapi>=0.115.14",
    "motor>=3.7.1",
    "pandas>=2.3.0",
    "pymongo>=4.13.2",
    "requests>=2.32.4",
    "tqdm>=4.67.1",
]
